[package]
name = "geo-types"
version = "0.4.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/georust/geo"
documentation = "https://docs.rs/geo-types/"
readme = "../README.md"
keywords = ["gis", "geo", "geography", "geospatial"]
description = "Geospatial primitive data types"
edition = "2018"

[dependencies]
num-traits = { version = "0.2", default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }

[dependencies.rstar]
git = "https://github.com/zendurix/rstar"
rev = "e188160c5d7483f94110ca60ec0ea66cb428bf60"
default-features = false

[features]
default = ["std"]
std = []
